--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "predeploy": "vite build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://<username>.github.io/<my-complex-app>",
+  "homepage": "https://Rishikaa.github.io/my-complex-app",
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
